<resources>
    <string name="app_name">Pharma</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="key_map">AIzaSyCSNZfWfM-dq9FLWv_-MKX-TxaLPo_upgA</string>
    //bottom bar
    <string name="pill">Thuốc</string>
    <string name="sick">Bệnh</string>
    <string name="dr">Bác sĩ</string>
    <string name="pharma">Nhà thuốc</string>
    <string name="meo">Mẹo vặt</string>
    //init
    <string name="how_to_use_pill"><Data>
<![CDATA[
			<b>Hướng dẫn sử dụng:</b> <br>%1$s <br> <br>
       		<b>Lưu ý:&#160;</b> <br>%2$s <br><br>
       		<b>Thông tin thuốc:&#160;</b> <br>%3$s <br><br>
       		<b>Tác dụng:&#160;</b> <br>%4$s <br><br>
       		<b>Bảo quản:&#160;</b> <br>%5$s <br><br>

        ]]>
</Data></string>
    <string name="decripe"><Data>
<![CDATA[
			%1$s


        ]]>
</Data></string>

    <string name="order_infor_prd"><Data>
<![CDATA[
			<b><font color="#23a0d7" size="20">%1$s</font></b> <br><br>
       		<b>Số lượng:&#160;</b> %2$s <br><br>
       		<b>Tổng giá:&#160;</b><font color="#BE1E2D"> %3$s VND</font><br><br>

        ]]>
</Data></string>

    <string name="order_dialog_product"><Data>
<![CDATA[
			<b>Tên sản phẩm:</b> <br>%1$s <br> <br>
       		<b>Số lượng:&#160;</b> <br>%2$s <br><br>
       		<b>Giá:&#160;</b> <br>%3$s VND<br><br>
       		<b>Tổng giá:&#160;</b> <br>%4$s VND<br>

        ]]>
</Data></string>

    <string name="order_dialog_customer"><Data>
<![CDATA[
			<b>Tên người đặt:</b> <br>%1$s <br> <br>
       		<b>Địa chỉ:&#160;</b> <br>%2$s <br><br>
       		<b>Số điện thoại:&#160;</b> <br>%3$s <br><br>
       		<b>Email:&#160;</b> <br>%4$s <br><br>

        ]]>
</Data></string>

    <string name="how_to_use_sick"><Data>
<![CDATA[
			<b>Định nghĩa:</b> <br>%1$s <br> <br>
       		<b>Chi tiết:&#160;</b> <br><p>%2$s</p><br><br>


        ]]>
</Data></string>

    <string name="people_cmt">%1$s người đã nhận xét về %2$s này</string>
    <string name="list_pharma">Danh sách nhà thuốc</string>
    <string name="map_pharma">Bản đồ nhà thuốc</string>
    <string name="focus_news">Tin nổi bật</string>
    <string name="hearth_news">Tin sức khỏe</string>
    <string name="meo_news">Mẹo vặt</string>
    <string name="adr">Địa chỉ</string>
    <string name="sms">Nhắn tin</string>
    <string name="phone">Số điện thoại</string>
    <string name="dr2">Dược sĩ</string>
    <string name="rate_now">Đánh giá ngay</string>
    <string name="save_login">Lưu đăng nhập</string>
    <string name="detail_order">Chi tiết đơn hàng</string>
    <string name="lost_pass">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký tài khoản mới</string>
    <string name="not_login">Bỏ qua đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="register2">Đăng ký</string>
    <string name="email">Email</string>
    <string name="re_pas">Nhập lại mật khẩu</string>
    <string name="birth">Ngày sinh</string>
    <string name="agree">Tôi đồng ý với các điều khoản</string>
    <string name="have_acc">Đã có tài khoản</string>
    <string name="back_login">Quay lại đăng nhập</string>
    <string name="txt_lostpass">Hãy nhập tên tài khoản chúng tôi sẽ gửi mã xác nhận về địa chỉ Email của bạn</string>
    <string name="type_code">Nhập mã xác nhận</string>
    <string name="get_pass">Lấy lại mật khẩu</string>
    <string name="change_infor">Thay đổi thông tin</string>
    <string name="change_pass">Thay đổi mật khẩu</string>
    <string name="update_inf">Cập nhật thông tin</string>
    <string name="order">Đặt hàng</string>
    <string name="update_pass">Cập nhật mật khẩu</string>
    <string name="update_pass_succes">Cập nhật mật khẩu thành công</string>
    <string name="update_pass_failse">Cập nhật mật khẩu thất bại</string>
    <string name="inf_pill">Thông tin thuốc</string>
    <string name="inf_pharma">Thông tin nhà thuốc</string>
    <string name="inf_sick">Thông tin bệnh</string>
    <string name="detail_infor">Thông tin chi tiết</string>
    <string name="list_order">Danh sách đơn hàng</string>
    <string name="list_pharma_care">Danh sách nhà thuốc</string>
    <string name="rate">Đánh giá</string>
    <string name="txt_comment_pharma">Đánh giá nhà thuốc</string>
    <string name="txt_comment_pill">Đánh giá thuốc</string>
    <string name="txt_comment_sick">Đánh giá bài viết</string>
    <string name="fillter">Bộ lọc</string>
    <string name="pill_tp">Thành phần thuốc</string>
    <string name="price">Giá: Từ %1$s đến %2$s</string>
    <string name="apply">Áp dụng</string>
    <string name="short_title">Đánh giá ngắn</string>
    <string name="search_pill">Tìm kiếm thuốc</string>
    <string name="search_sick">Tìm kiếm bệnh</string>
    <string name="search_pharma">Tìm nhà thuốc</string>
    <string name="search_dr">Tìm kiếm bác sĩ</string>
    <string name="meo_title">Mẹo vặt</string>
    <string name="infor">Thông tin</string>
    <string name="title_change_pass">Thay đổi mật khẩu</string>
    <string name="show_all">Hiển thị tất cả</string>
    <string name="not_near_you">Không có nhà thuốc nào xung quanh</string>

    <string name="full_name">Họ và tên</string>
    <string name="work_adr">Nơi làm</string>
    <string name="chuyen_khoa">Chuyên khoa</string>
    <string name="mess">Message</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sms2">Tin nhắn</string>
    <string name="hang">Hangouts</string>
    <string name="gmail">Gmail</string>
    <string name="ggpl">Google+</string>
    <string name="coppy">Sao chép</string>
    <string name="lq_pill">Thuốc liên quan</string>
    <string name="lq_sick">Bệnh liên quan</string>
    <string name="buy_now">Mua ngay</string>
    <string name="map">Bản đồ</string>
    //tittle
    <string name="title_user_inf">Thông tin tài khoản</string>
    <string name="title_register">Đăng ký tài khoản</string>
    <string name="title_meo">Chi tiết mẹo vặt</string>
    <string name="title_term">Điều khoản sử dụng</string>
    <string name="title_changepass">Thay đổi mật khẩu</string>
    <string name="title_lost_pass">Lấy lại mật khẩu</string>
    <string name="title_share">Chia sẻ</string>
    <string name="title_change_infor">Thay đổi thông tin</string>
    <string name="title_care_sick">Bệnh đã quan tâm</string>
    <string name="title_care_pill">Thuốc đã quan tâm</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="order_success_checkmail">Đặt hàng thành công, kiểm tra đơn hàng trong email của bạn</string>
    <string name="order_fail">Sản phẩm đã hết hoặc không tồn tại</string>
    <string name="cant_search">Không tìm thấy kết quả</string>


    //notif
    <string name="no_internet">Không có kết nối mạng, vui lòng kiểm tra lại.</string>
    <string name="error">Có lỗi, vui lòng thử lại</string>
    <string name="empty_list">Danh sách rỗng</string>

    <string name="null_comment">Không có bình luận</string>
    <string name="server_err">Lỗi lấy dữ liệu</string>
    <string name="need_image">Thuốc này cần có đơn của bác sỹ. Hãy đăng ảnh chụp đơn thuốc trước khi đặt hàng</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="re_new_pass">Nhập lại mật khẩu mới</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="has_acc">Tài khoản đã tồn tại</string>
    <string name="not_check">Bạn chưa đồng ý với điều khoản sử dụng</string>
    <string name="validate_email">Email không đúng định dạng</string>
    <string name="change_infor_success">Thay đổi thông tin thành công</string>
    <string name="change_infor_failse">Thay đổi thông tin thất bại</string>
    <string name="validate_phone">Số điện thoại không đúng</string>
    <string name="short_pass">Mật khẩu phải từ 8 ký tự trở lên</string>
    <string name="null_star">Chưa có đánh giá</string>
    <string name="user_pass_wrong">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="you_not_login">Bạn chưa đăng nhập</string>
    <string name="pass_wrong">Mật khẩu cũ sai</string>
    <!--<string name="title_user_inf">Thông tin tài khoản</string>-->
    <string name="title_rate_pharma">Đánh giá về nhà thuốc này</string>
    <string name="title_rate_sick">Đánh giá về bài viết này </string>
    <string name="title_rate_pill">Đánh giá về thuốc</string>
    <string name="title_rate_app">Đánh giá của bạn về ứng dụng</string>
    <string name="loading">Đang xử lý...</string>
    <string name="gps_off">Gps đang tắt, bật lên để tăng độ chính xác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //error
    <string name="name_not_null">Không được để trống tên</string>
    <string name="phone_not_null">Không được để trống số điện thoại</string>
    <string name="adr_not_null">Không được để trống địa chỉ</string>

    <string name="pass_notequal">Mật khẩu không trùng nhau</string>
    <string name="old_pass_notequal">Mật khẩu mới không được trùng mật khẩu cũ</string>
    <string name="empty">Hãy điền đủ các trường</string>
    <string name="found_email">Email đã tồn tại</string>
    <string name="cant_register">Đăng ký không thành công, vui lòng thử lại</string>
    <string name="network_err">Lỗi kết nối, vui lòng thử lại</string>
    <string name="cancel_success">Hủy đơn hàng thành công</string>
    //validate
    <string name="notnull">Không được để trống</string>
    <string name="session_out">Phiên đăng nhập đã hết hạn, vui lòng đăng nhập lại</string>


</resources>
