<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="app.pharma.com.pharma.activity.Login.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/cardiogram"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:elevation="@dimen/elevation"
            android:textSize="12sp"

            android:maxWidth="300dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/user_name"

            android:textColorHint="@color/blue"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_edt_white"
            android:padding="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:elevation="5dp"
            android:maxWidth="300dp"
            android:hint="@string/pass"
            android:textSize="12sp"
            android:textColorHint="@color/blue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_edt_white"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"

                android:orientation="horizontal"
                android:layout_weight="1">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:background="@drawable/select_checkbox"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/blue"
                    android:gravity="center_vertical"
                    android:text="@string/save_login"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/blue"
                    android:id="@+id/tv_lost_pass"
                    android:text="@string/lost_pass"/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/login"
            android:elevation="10dp"
            android:padding="5dp"
            android:background="@drawable/border_edt_pink"
            android:layout_marginTop="20dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_register"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue"
            android:text="@string/register"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:text="@string/not_login"/>

    </LinearLayout>
</RelativeLayout>
