<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:text="@string/fillter"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:text="@string/sick"/>
            <Spinner

                android:id="@+id/spin_sick"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/light_gray"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:text="@string/pill_tp"/>
            <Spinner

                android:id="@+id/spin_tp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/light_gray"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_price"
                android:textColor="@color/black"
                android:text="@string/price"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"


               />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="@string/apply"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                android:paddingRight="30dp"
                android:textColor="@color/white"
                android:background="@color/dark_red"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>