<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="app.pharma.com.pharma.activity.Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top">
        <include
            layout="@layout/toolbar_back"></include>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/cardiogram"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_lostpass"
                android:textColor="@color/blue"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:elevation="@dimen/elevation"
                android:maxWidth="300dp"
                android:hint="@string/email"
                android:textSize="12sp"
                android:textColorHint="@color/blue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edt_white"
                android:padding="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:elevation="@dimen/elevation"
                android:maxWidth="300dp"
                android:hint="@string/pass"
                android:textSize="12sp"
                android:textColorHint="@color/blue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edt_white"
                android:padding="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:elevation="@dimen/elevation"
                android:maxWidth="300dp"
                android:hint="@string/re_pas"
                android:textSize="12sp"
                android:textColorHint="@color/blue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_edt_white"
                android:padding="5dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/get_pass"
                android:elevation="10dp"
                android:id="@+id/btn_getcode"
                android:padding="5dp"
                android:background="@drawable/border_edt_pink"
                android:layout_marginTop="20dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/blue"
                android:text="@string/back_login"/>


        </LinearLayout>

</RelativeLayout>
