<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="app.pharma.com.pharma.Fragment.Pharma.Insite_List">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/swip">
    <ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:id="@+id/lv_pharma"></ListView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/txt_null"
        android:textColor="@color/black"
        android:text="@string/empty_list"
        android:textSize="16sp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/ln_null"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/txt_null_2"
            android:textColor="@color/black"
            android:text="@string/not_near_you"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/show_all"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:text="@string/show_all"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>
</FrameLayout>
