<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.pharma.com.pharma.Fragment.Pharma.Pharma_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:id="@+id/ln_pharma"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/focus_news"
                android:id="@+id/tv_focus"
                android:textColor="@color/gray"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hearth_news"
                android:gravity="center"
                android:textAlignment="center"
                android:id="@+id/tv_hearth"
                android:layout_weight="1"
                android:textColor="@color/gray"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/meo_news"
                android:gravity="center"
                android:textAlignment="center"
                android:id="@+id/tv_meo"
                android:layout_weight="1"
                android:textColor="@color/gray"></TextView>

        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/lv_meo"></ListView>
    </LinearLayout>
</FrameLayout>
